Rebrand and improvements of Digid Added in feature to scan DriversLicense Re-designed User interface Improved user experience Current Identities added for scanning DriverLicense Integrated Microblink, currently for scanning Id's --Haven't tried using payment api Fix not yet added for storing the dates as JDBC Format for sqlite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,26 @@
 <resources>
-    <string name="app_name">EFid</string>
+    <string name="app_name">Digid</string>
     <string name="action_settings">Settings</string>
-    <string name="we_make_finance_eazi">We make finance EAZI</string>
+    <string name="imagine_invent">Imagine and invent</string>
+    <string name="email">email</string>
+    <string name="password">Password</string>
+    <string name="email_address">Email address</string>
+    <string name="full_name">Full name</string>
+    <string name="title_activity_id_navigation">IdNavigationActivity</string>
+    <string name="cards">Cards</string>
+    <string name="id_s">Ids</string>
+    <string name="invoices">Invoices</string>
+    <string name="your_cards_are_displayed_here">Your <b><font color="#0433B8">cards</font></b> are displayed<br/> here</string>
+    <string name="your_ids_are_displayed_here">Your <b><font color="#0433B8">ids</font></b> are displayed<br/> here</string>
+    <string name="scan">Scan</string>
+    <string name="pick_an_identity">Pick an Identity type to scan</string>
+    <string name="your_invoices_are_displayed_here">Your <b><font color="#0433B8">invoices</font></b> are displayed<br/> here</string>
+    <string name="account">Account</string>
+
+    <string-array name="identities">
+        <item>Drivers License</item>
+        <item>Passport</item>
+        <item>Visa</item>
+    </string-array>
+
 </resources>
